spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -330,7 +330,7 @@ a {
 }
 
 .about h2 {
-    padding: 0px 0 5px 0;
+    margin-top: 4px;
 }
 
 .about p {
